Don't crash when closing a file during a quiz.

BUG:129697

svn path=/branches/KDE/3.5/kdeedu/kwordquiz/; revision=554362